k8s/apps/kube-state-metrics/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  namespace: kube-state-metrics
  labels:
    app: kube-state-metrics
spec:
  type: ClusterIP
  ports:
    - name: http-metrics
      port: 8080
      targetPort: http-metrics
      protocol: TCP
  selector:
    app: kube-state-metrics
